# match-3-mining-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  asset_management.cpp  asset_management.h  asset_store.h  board_logic.cpp  constants.h  constants_init.cpp  coordinate.cpp  coordinate.h  default_item_rendering.cpp  default_item_rendering.h  effect.h  falling.cpp  game.cpp  game.h  grid.cpp  grid.h  item.h  item_bomb.cpp  item_rainbow.cpp  item_render.cpp  item_specials.h  item_star.cpp  item_state.h  item_vanilla.cpp  item_vanilla.h  main.cpp  match_3.project  render.cpp  render.h  swap.cpp  swap.h  window_admin.cpp  window_admin.h
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
rundir/images/: credit.txt
src/: CMakeLists.txt  constants_window.h  coordinate.cpp  game.cpp  item_specials.h  render.cpp  rgb_union.h  swap.cpp  window_admin.h
src/abstractions/: grid.cpp
src/assets/: asset_management.cpp  asset_store.h
src/constants/: constants_colour_count.h  constants_grid.h
src/effects/: falling.h
src/items/: item_render.cpp
src/main_logic/: board_logic.h  game.cpp  game.h
src/program/: window_admin.cpp  window_admin.h
src/rendering/: render.h  rgb_union.h
